imported information to index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,9 @@ input{
 .resultsDiv{
     text-align: center;
 }
+.question{
+    font-size: 24px;
+}
 /* .endGame{
     visibility:hidden;
     height:300px;
